--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: python
 python:
   - "3.6"
 install:
-  - python setup.py -q install
+  - pip install -e .
 script:
   - pytest tests
 env:
