--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ python:
 install:
   - pip install -e .
 script:
-  - pytest --cov-report=xml --cov=epi tests
+  - pytest --cov-report=xml --cov=epi tests -W ignore::DeprecationWarning
 env:
   - CODECOV_TOKEN="152934f4-bf87-4e13-9132-3303aed1646d"
 after_success:
