--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,5 +1,8 @@
 alabaster==0.7.12
+matplotlib==2.2.3
 numpy==1.18.1
+pandas==0.25.3
 scipy==1.4.1
+seaborn==0.9.0
 Sphinx==2.3.1
 sphinx_rtd_theme==0.4.3
